[gd_scene load_steps=15 format=2]

[ext_resource path="res://Images/Grid.png" type="Texture" id=1]
[ext_resource path="res://Images/Background.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/TileMapBasic.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Enemies/Spinner/Spinner.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Decorative/Crystal/Crystal.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Levels/Level3/Level3.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Enemies/EnemySpawner/EnemeySpawner.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/DestroyWal/DestoryWall.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/EndLevelPortal/Portal.tscn" type="PackedScene" id=10]
[ext_resource path="res://Images/LightDifuse.png" type="Texture" id=11]
[ext_resource path="res://Images/DestoryWallLight.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 272, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 144, 32 )

[node name="Level3" type="Node2D"]
script = ExtResource( 7 )
LEVEL = "LEVEL 3"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ShowLighting" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 0.3, 0.3 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 3840, 4309 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
modulate = Color( 1.1, 1.1, 1.1, 1 )
texture = ExtResource( 2 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 3840, 2160 )

[node name="Grid" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
texture = ExtResource( 1 )
centered = false

[node name="TileMap" parent="." instance=ExtResource( 4 )]
tile_data = PoolIntArray( -4063234, 0, 0, -4063233, 0, 1, -4128768, 0, 1, -4128767, 0, 2, -3997699, 0, 0, -3997698, 0, 4, -3997697, 0, 65537, -4063232, 0, 65537, -4063231, 0, 5, -4063230, 0, 2, -3932164, 0, 0, -3932163, 0, 4, -3932162, 0, 65537, -3932161, 0, 65537, -3997696, 0, 65537, -3997695, 0, 65537, -3997694, 0, 5, -3997693, 0, 2, -3866628, 0, 65536, -3866627, 0, 65537, -3866626, 0, 65537, -3866625, 0, 65537, -3932160, 0, 65537, -3932159, 0, 65537, -3932158, 0, 65537, -3932157, 0, 65538, -3801092, 0, 131072, -3801091, 0, 65540, -3801090, 0, 65537, -3801089, 0, 65537, -3866624, 0, 65537, -3866623, 0, 65537, -3866622, 0, 65541, -3866621, 0, 131074, -3735555, 0, 131072, -3735554, 0, 65540, -3735553, 0, 65537, -3801088, 0, 65537, -3801087, 0, 65541, -3801086, 0, 131074, -3670018, 0, 65536, -3670017, 0, 65537, -3735552, 0, 65537, -3735551, 0, 65538, -3604483, 0, 0, -3604482, 0, 4, -3604481, 0, 65537, -3670016, 0, 65537, -3670015, 0, 5, -3670014, 0, 2, -3538947, 0, 65536, -3538946, 0, 65537, -3538945, 0, 65537, -3604480, 0, 65537, -3604479, 0, 65537, -3604478, 0, 65538, -3473411, 0, 131072, -3473410, 0, 65540, -3473409, 0, 65537, -3538944, 0, 65537, -3538943, 0, 65541, -3538942, 0, 131074, -3407874, 0, 65536, -3407873, 0, 65537, -3473408, 0, 65537, -3473407, 0, 65538, -3342340, 0, 0, -3342339, 0, 1, -3342338, 0, 4, -3342337, 0, 65537, -3407872, 0, 65537, -3407871, 0, 5, -3407870, 0, 1, -3407869, 0, 2, -3276804, 0, 65536, -3276803, 0, 65537, -3276802, 0, 65537, -3276801, 0, 65537, -3342336, 0, 65537, -3342335, 0, 65537, -3342334, 0, 65537, -3342333, 0, 65538, -3211270, 0, 0, -3211269, 0, 1, -3211268, 0, 4, -3211267, 0, 65537, -3211266, 0, 65537, -3211265, 0, 65537, -3276800, 0, 65537, -3276799, 0, 65537, -3276798, 0, 65537, -3276797, 0, 5, -3276796, 0, 1, -3276795, 0, 2, -3145736, 0, 0, -3145735, 0, 1, -3145734, 0, 4, -3145733, 0, 65537, -3145732, 0, 65537, -3145731, 0, 65537, -3145730, 0, 65537, -3145729, 0, 65537, -3211264, 0, 65537, -3211263, 0, 65537, -3211262, 0, 65537, -3211261, 0, 65537, -3211260, 0, 65537, -3211259, 0, 5, -3211258, 0, 1, -3211257, 0, 2, -3080200, 0, 65536, -3080199, 0, 65537, -3080198, 0, 65537, -3080197, 0, 65537, -3080196, 0, 65537, -3080195, 0, 65537, -3080194, 0, 65537, -3080193, 0, 65537, -3145728, 0, 65537, -3145727, 0, 65537, -3145726, 0, 65537, -3145725, 0, 65537, -3145724, 0, 65537, -3145723, 0, 65537, -3145722, 0, 65537, -3145721, 0, 65538, -3014665, 0, 0, -3014664, 0, 4, -3014663, 0, 65537, -3014662, 0, 65537, -3014661, 0, 65537, -3014660, 0, 65537, -3014659, 0, 65537, -3014658, 0, 65537, -3014657, 0, 65537, -3080192, 0, 65537, -3080191, 0, 65537, -3080190, 0, 65537, -3080189, 0, 65537, -3080188, 0, 65537, -3080187, 0, 65537, -3080186, 0, 65537, -3080185, 0, 5, -3080184, 0, 2, -2949129, 0, 65536, -2949128, 0, 65537, -2949127, 0, 65537, -2949126, 0, 65537, -2949125, 0, 65537, -2949124, 0, 65537, -2949123, 0, 65537, -2949122, 0, 65537, -2949121, 0, 65537, -3014656, 0, 65537, -3014655, 0, 65537, -3014654, 0, 65537, -3014653, 0, 65537, -3014652, 0, 65537, -3014651, 0, 65537, -3014650, 0, 65537, -3014649, 0, 65537, -3014648, 0, 65538, -2883593, 0, 65536, -2883592, 0, 65537, -2883591, 0, 65537, -2883590, 0, 65537, -2883589, 0, 65537, -2883588, 0, 65537, -2883587, 0, 65537, -2883586, 0, 65537, -2883585, 0, 65537, -2949120, 0, 65537, -2949119, 0, 65537, -2949118, 0, 65537, -2949117, 0, 65537, -2949116, 0, 65537, -2949115, 0, 65537, -2949114, 0, 65537, -2949113, 0, 65537, -2949112, 0, 65538, -2818059, 0, 0, -2818058, 0, 1, -2818057, 0, 4, -2818056, 0, 65537, -2818055, 0, 65537, -2818054, 0, 65537, -2818053, 0, 65537, -2818052, 0, 65537, -2818051, 0, 65537, -2818050, 0, 65537, -2818049, 0, 65537, -2883584, 0, 65537, -2883583, 0, 65537, -2883582, 0, 65537, -2883581, 0, 65537, -2883580, 0, 65537, -2883579, 0, 65537, -2883578, 0, 65537, -2883577, 0, 65537, -2883576, 0, 5, -2883575, 0, 1, -2883574, 0, 2, -2752523, 0, 65536, -2752522, 0, 65537, -2752521, 0, 65537, -2752520, 0, 65537, -2752519, 0, 65537, -2752518, 0, 65537, -2752517, 0, 65537, -2752516, 0, 65537, -2752515, 0, 65537, -2752514, 0, 65537, -2752513, 0, 65537, -2818048, 0, 65537, -2818047, 0, 65537, -2818046, 0, 65537, -2818045, 0, 65537, -2818044, 0, 65537, -2818043, 0, 65537, -2818042, 0, 65537, -2818041, 0, 65537, -2818040, 0, 65537, -2818039, 0, 65537, -2818038, 0, 65538, -2686987, 0, 65536, -2686986, 0, 65537, -2686985, 0, 65537, -2686984, 0, 65537, -2686983, 0, 65537, -2686982, 0, 65537, -2686981, 0, 65537, -2686980, 0, 65537, -2686979, 0, 65537, -2686978, 0, 65537, -2686977, 0, 65537, -2752512, 0, 65537, -2752511, 0, 65537, -2752510, 0, 65537, -2752509, 0, 65537, -2752508, 0, 65537, -2752507, 0, 65537, -2752506, 0, 65537, -2752505, 0, 65537, -2752504, 0, 65537, -2752503, 0, 65537, -2752502, 0, 65538, -2621451, 0, 65536, -2621450, 0, 65537, -2621449, 0, 65537, -2621448, 0, 65537, -2621447, 0, 65537, -2621446, 0, 65537, -2621445, 0, 65537, -2621444, 0, 65537, -2621443, 0, 65537, -2621442, 0, 65537, -2621441, 0, 65537, -2686976, 0, 65537, -2686975, 0, 65537, -2686974, 0, 65537, -2686973, 0, 65537, -2686972, 0, 65537, -2686971, 0, 65537, -2686970, 0, 65537, -2686969, 0, 65537, -2686968, 0, 65537, -2686967, 0, 65537, -2686966, 0, 65538, -2555915, 0, 131072, -2555914, 0, 131073, -2555913, 0, 65540, -2555912, 0, 65537, -2555911, 0, 65537, -2555910, 0, 65537, -2555909, 0, 65537, -2555908, 0, 65537, -2555907, 0, 65537, -2555906, 0, 65537, -2555905, 0, 65537, -2621440, 0, 65537, -2621439, 0, 65537, -2621438, 0, 65537, -2621437, 0, 65537, -2621436, 0, 65537, -2621435, 0, 65537, -2621434, 0, 65537, -2621433, 0, 65537, -2621432, 0, 65541, -2621431, 0, 131073, -2621430, 0, 131074, -2490377, 0, 65536, -2490376, 0, 65537, -2490375, 0, 65537, -2490374, 0, 65537, -2490373, 0, 65537, -2490372, 0, 65537, -2490371, 0, 65537, -2490370, 0, 65537, -2490369, 0, 65537, -2555904, 0, 65537, -2555903, 0, 65537, -2555902, 0, 65537, -2555901, 0, 65537, -2555900, 0, 65537, -2555899, 0, 65537, -2555898, 0, 65537, -2555897, 0, 65537, -2555896, 0, 65538, -2424841, 0, 65536, -2424840, 0, 65537, -2424839, 0, 65537, -2424838, 0, 65537, -2424837, 0, 65537, -2424836, 0, 65537, -2424835, 0, 65537, -2424834, 0, 65537, -2424833, 0, 65537, -2490368, 0, 65537, -2490367, 0, 65537, -2490366, 0, 65537, -2490365, 0, 65537, -2490364, 0, 65537, -2490363, 0, 65537, -2490362, 0, 65537, -2490361, 0, 65537, -2490360, 0, 65538, -2359305, 0, 131072, -2359304, 0, 65540, -2359303, 0, 65537, -2359302, 0, 65537, -2359301, 0, 65537, -2359300, 0, 65537, -2359299, 0, 65537, -2359298, 0, 65537, -2359297, 0, 65537, -2424832, 0, 65537, -2424831, 0, 65537, -2424830, 0, 65537, -2424829, 0, 65537, -2424828, 0, 65537, -2424827, 0, 65537, -2424826, 0, 65537, -2424825, 0, 65541, -2424824, 0, 131074, -2293768, 0, 65536, -2293767, 0, 65537, -2293766, 0, 65537, -2293765, 0, 65537, -2293764, 0, 65537, -2293763, 0, 65537, -2293762, 0, 65537, -2293761, 0, 65537, -2359296, 0, 65537, -2359295, 0, 65537, -2359294, 0, 65537, -2359293, 0, 65537, -2359292, 0, 65537, -2359291, 0, 65537, -2359290, 0, 65537, -2359289, 0, 65538, -2228232, 0, 131072, -2228231, 0, 131073, -2228230, 0, 65540, -2228229, 0, 65537, -2228228, 0, 65537, -2228227, 0, 65537, -2228226, 0, 65537, -2228225, 0, 65537, -2293760, 0, 65537, -2293759, 0, 65537, -2293758, 0, 65537, -2293757, 0, 65537, -2293756, 0, 65537, -2293755, 0, 65541, -2293754, 0, 131073, -2293753, 0, 131074, -2162694, 0, 131072, -2162693, 0, 131073, -2162692, 0, 65540, -2162691, 0, 65537, -2162690, 0, 65537, -2162689, 0, 65537, -2228224, 0, 65537, -2228223, 0, 65537, -2228222, 0, 65537, -2228221, 0, 65541, -2228220, 0, 131073, -2228219, 0, 131074, -2097156, 0, 131072, -2097155, 0, 65540, -2097154, 0, 65537, -2097153, 0, 65537, -2162688, 0, 65537, -2162687, 0, 65537, -2162686, 0, 65541, -2162685, 0, 131074, -2031619, 0, 65536, -2031618, 0, 65537, -2031617, 0, 65537, -2097152, 0, 65537, -2097151, 0, 65537, -2097150, 0, 65538, -1966085, 0, 0, -1966084, 0, 1, -1966083, 0, 4, -1966082, 0, 65537, -1966081, 0, 65537, -2031616, 0, 65537, -2031615, 0, 65537, -2031614, 0, 5, -2031613, 0, 1, -2031612, 0, 2, -1900553, 0, 0, -1900552, 0, 1, -1900551, 0, 1, -1900550, 0, 1, -1900549, 0, 4, -1900548, 0, 65537, -1900547, 0, 65537, -1900546, 0, 65537, -1900545, 0, 65537, -1966080, 0, 65537, -1966079, 0, 65537, -1966078, 0, 65537, -1966077, 0, 65537, -1966076, 0, 5, -1966075, 0, 1, -1966074, 0, 1, -1966073, 0, 1, -1966072, 0, 2, -1835018, 0, 0, -1835017, 0, 4, -1835016, 0, 65537, -1835015, 0, 65537, -1835014, 0, 65537, -1835013, 0, 65537, -1835012, 0, 65537, -1835011, 0, 65537, -1835010, 0, 65537, -1835009, 0, 65537, -1900544, 0, 65537, -1900543, 0, 65537, -1900542, 0, 65537, -1900541, 0, 65537, -1900540, 0, 65537, -1900539, 0, 65537, -1900538, 0, 65537, -1900537, 0, 65537, -1900536, 0, 5, -1900535, 0, 2, -1769482, 0, 65536, -1769481, 0, 65537, -1769480, 0, 65537, -1769479, 0, 65537, -1769478, 0, 65537, -1769477, 0, 65537, -1769476, 0, 65537, -1769475, 0, 65537, -1769474, 0, 65541, -1769473, 0, 131073, -1835008, 0, 131073, -1835007, 0, 65540, -1835006, 0, 65537, -1835005, 0, 65537, -1835004, 0, 65537, -1835003, 0, 65537, -1835002, 0, 65537, -1835001, 0, 65537, -1835000, 0, 65537, -1834999, 0, 65538, -1703947, 0, 0, -1703946, 0, 4, -1703945, 0, 65537, -1703944, 0, 65537, -1703943, 0, 65537, -1703942, 0, 65541, -1703941, 0, 131073, -1703940, 0, 131073, -1703939, 0, 131073, -1703938, 0, 131074, -1769471, 0, 131072, -1769470, 0, 131073, -1769469, 0, 131073, -1769468, 0, 131073, -1769467, 0, 65540, -1769466, 0, 65537, -1769465, 0, 65537, -1769464, 0, 65537, -1769463, 0, 5, -1769462, 0, 2, -1638411, 0, 65536, -1638410, 0, 65537, -1638409, 0, 65537, -1638408, 0, 65537, -1638407, 0, 65537, -1638406, 0, 65538, -1703931, 0, 65536, -1703930, 0, 65537, -1703929, 0, 65537, -1703928, 0, 65537, -1703927, 0, 65537, -1703926, 0, 65538, -1572875, 0, 131072, -1572874, 0, 65540, -1572873, 0, 65537, -1572872, 0, 65537, -1572871, 0, 65537, -1572870, 0, 5, -1572869, 0, 1, -1572868, 0, 1, -1572867, 0, 1, -1572866, 0, 2, -1638399, 0, 0, -1638398, 0, 1, -1638397, 0, 1, -1638396, 0, 1, -1638395, 0, 4, -1638394, 0, 65537, -1638393, 0, 65537, -1638392, 0, 65537, -1638391, 0, 65541, -1638390, 0, 131074, -1507338, 0, 65536, -1507337, 0, 65537, -1507336, 0, 65537, -1507335, 0, 65537, -1507334, 0, 65537, -1507333, 0, 65537, -1507332, 0, 65537, -1507331, 0, 65537, -1507330, 0, 5, -1507329, 0, 1, -1572864, 0, 1, -1572863, 0, 4, -1572862, 0, 65537, -1572861, 0, 65537, -1572860, 0, 65537, -1572859, 0, 65537, -1572858, 0, 65537, -1572857, 0, 65537, -1572856, 0, 65537, -1572855, 0, 65538, -1441802, 0, 131072, -1441801, 0, 65540, -1441800, 0, 65537, -1441799, 0, 65537, -1441798, 0, 65537, -1441797, 0, 65537, -1441796, 0, 65537, -1441795, 0, 65537, -1441794, 0, 65537, -1441793, 0, 65537, -1507328, 0, 65537, -1507327, 0, 65537, -1507326, 0, 65537, -1507325, 0, 65537, -1507324, 0, 65537, -1507323, 0, 65537, -1507322, 0, 65537, -1507321, 0, 65537, -1507320, 0, 65541, -1507319, 0, 131074, -1376265, 0, 131072, -1376264, 0, 131073, -1376263, 0, 131073, -1376262, 0, 131073, -1376261, 0, 65540, -1376260, 0, 65537, -1376259, 0, 65537, -1376258, 0, 65537, -1376257, 0, 65537, -1441792, 0, 65537, -1441791, 0, 65537, -1441790, 0, 65537, -1441789, 0, 65537, -1441788, 0, 65541, -1441787, 0, 131073, -1441786, 0, 131073, -1441785, 0, 131073, -1441784, 0, 131074, -1310725, 0, 131072, -1310724, 0, 131073, -1310723, 0, 65540, -1310722, 0, 65537, -1310721, 0, 65537, -1376256, 0, 65537, -1376255, 0, 65537, -1376254, 0, 65541, -1376253, 0, 131073, -1376252, 0, 131074, -1245187, 0, 65536, -1245186, 0, 65537, -1245185, 0, 65537, -1310720, 0, 65537, -1310719, 0, 65537, -1310718, 0, 65538, -1179651, 0, 65536, -1179650, 0, 65537, -1179649, 0, 65537, -1245184, 0, 65537, -1245183, 0, 65537, -1245182, 0, 65538, -1114115, 0, 65536, -1114114, 0, 65537, -1114113, 0, 65537, -1179648, 0, 65537, -1179647, 0, 65537, -1179646, 0, 65538, -1048580, 0, 0, -1048579, 0, 4, -1048578, 0, 65537, -1048577, 0, 65537, -1114112, 0, 65537, -1114111, 0, 65537, -1114110, 0, 5, -1114109, 0, 2, -983045, 0, 0, -983044, 0, 4, -983043, 0, 65537, -983042, 0, 65537, -983041, 0, 65537, -1048576, 0, 65537, -1048575, 0, 65537, -1048574, 0, 65537, -1048573, 0, 5, -1048572, 0, 2, -917510, 0, 0, -917509, 0, 4, -917508, 0, 65537, -917507, 0, 65537, -917506, 0, 65537, -917505, 0, 65537, -983040, 0, 65537, -983039, 0, 65537, -983038, 0, 65537, -983037, 0, 65537, -983036, 0, 5, -983035, 0, 2, -851975, 0, 0, -851974, 0, 4, -851973, 0, 65537, -851972, 0, 65537, -851971, 0, 65537, -851970, 0, 65537, -851969, 0, 65537, -917504, 0, 65537, -917503, 0, 65537, -917502, 0, 65537, -917501, 0, 65537, -917500, 0, 65537, -917499, 0, 5, -917498, 0, 2, -786439, 0, 65536, -786438, 0, 65537, -786437, 0, 65537, -786436, 0, 65537, -786435, 0, 65537, -786434, 0, 65537, -786433, 0, 65537, -851968, 0, 65537, -851967, 0, 65537, -851966, 0, 65537, -851965, 0, 65537, -851964, 0, 65537, -851963, 0, 65537, -851962, 0, 65538, -720903, 0, 131072, -720902, 0, 65540, -720901, 0, 65537, -720900, 0, 65537, -720899, 0, 65537, -720898, 0, 65537, -720897, 0, 65537, -786432, 0, 65537, -786431, 0, 65537, -786430, 0, 65537, -786429, 0, 65537, -786428, 0, 65537, -786427, 0, 65541, -786426, 0, 131074, -655366, 0, 131072, -655365, 0, 65540, -655364, 0, 65537, -655363, 0, 65537, -655362, 0, 65537, -655361, 0, 65537, -720896, 0, 65537, -720895, 0, 65537, -720894, 0, 65537, -720893, 0, 65537, -720892, 0, 65541, -720891, 0, 131074, -589829, 0, 131072, -589828, 0, 65540, -589827, 0, 65537, -589826, 0, 65537, -589825, 0, 65537, -655360, 0, 65537, -655359, 0, 65537, -655358, 0, 65537, -655357, 0, 65541, -655356, 0, 131074, -524292, 0, 131072, -524291, 0, 65540, -524290, 0, 65537, -524289, 0, 65537, -589824, 0, 65537, -589823, 0, 65537, -589822, 0, 65541, -589821, 0, 131074, -458755, 0, 65536, -458754, 0, 65537, -458753, 0, 65537, -524288, 0, 65537, -524287, 0, 65537, -524286, 0, 65538, -393219, 0, 65536, -393218, 0, 65537, -393217, 0, 65537, -458752, 0, 65537, -458751, 0, 65537, -458750, 0, 65538, -327683, 0, 65536, -327682, 0, 65537, -327681, 0, 65537, -393216, 0, 65537, -393215, 0, 65537, -393214, 0, 65538, -262147, 0, 65536, -262146, 0, 65537, -262145, 0, 65537, -327680, 0, 65537, -327679, 0, 65537, -327678, 0, 65538, -196611, 0, 65536, -196610, 0, 65537, -196609, 0, 65537, -262144, 0, 65537, -262143, 0, 65537, -262142, 0, 65538, -131076, 0, 0, -131075, 0, 4, -131074, 0, 65537, -131073, 0, 65537, -196608, 0, 65537, -196607, 0, 65537, -196606, 0, 5, -196605, 0, 2, -65540, 0, 65536, -65539, 0, 65537, -65538, 0, 65537, -65537, 0, 65537, -131072, 0, 65537, -131071, 0, 65537, -131070, 0, 65537, -131069, 0, 65538, -4, 0, 131072, -3, 0, 65540, -2, 0, 65537, -1, 0, 65537, -65536, 0, 65537, -65535, 0, 65537, -65534, 0, 65541, -65533, 0, 131074, 65533, 0, 65536, 65534, 0, 65537, 65535, 0, 65537, 0, 0, 65537, 1, 0, 65537, 2, 0, 65538, 131069, 0, 131072, 131070, 0, 65540, 131071, 0, 65537, 65536, 0, 65537, 65537, 0, 65541, 65538, 0, 131074, 196606, 0, 131072, 196607, 0, 131073, 131072, 0, 131073, 131073, 0, 131074 )

[node name="Spinner" parent="." instance=ExtResource( 5 )]
position = Vector2( 312, -1600 )
line_length = 300

[node name="Spinner2" parent="." instance=ExtResource( 5 )]
position = Vector2( -312, -1600 )
line_length = 300

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="Portal" parent="." instance=ExtResource( 10 )]
position = Vector2( 0, -7616 )
scale = Vector2( 1.44, 1.2 )

[node name="Lights" type="Node2D" parent="."]

[node name="Crystal" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 328, -192 )

[node name="Crystal2" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( -320, -192 )

[node name="Crystal3" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( -704, -1600 )

[node name="Crystal4" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 712, -1600 )

[node name="Crystal5" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 1224, -3264 )

[node name="Crystal6" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( -1216, -3264 )

[node name="Crystal7" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( -320, -3008 )

[node name="Crystal8" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 320, -3008 )

[node name="Crystal9" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( -320, -3520 )

[node name="Crystal10" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 320, -3520 )

[node name="Crystal11" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( -320, -3520 )

[node name="Crystal12" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 456, -3776 )

[node name="Crystal13" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( -448, -3776 )

[node name="Crystal19" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 320, -4288 )

[node name="Crystal20" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( -320, -4288 )

[node name="Crystal21" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( -832, -4544 )

[node name="Crystal22" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 832, -4544 )

[node name="Crystal23" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 960, -5824 )

[node name="Crystal24" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( -960, -5824 )

[node name="Crystal25" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( -576, -6208 )

[node name="Crystal26" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 576, -6208 )

[node name="Crystal16" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 320, -7616 )

[node name="Crystal17" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( -320, -7616 )

[node name="Crystal18" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 0, -7872 )

[node name="Crystal27" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 200, -6976 )

[node name="Crystal28" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( -200, -6976 )

[node name="DestoryWall" parent="." instance=ExtResource( 9 )]
position = Vector2( -2, -6400 )
num_walls = 3
wall_width = 350
balls_per_wall = 14

[node name="EnemyDetectionArea2D" type="Area2D" parent="."]
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea2D"]
position = Vector2( 0, -4032 )
shape = SubResource( 1 )

[node name="Spawners" type="Node2D" parent="."]

[node name="EnemeySpawner3" parent="Spawners" instance=ExtResource( 8 )]
position = Vector2( -1152, -5312 )
rotation = -1.5708
spawn_time = 3

[node name="Light2D" parent="Spawners/EnemeySpawner3" index="3"]
position = Vector2( 538.96, 2.97302 )
offset = Vector2( -538.96, -2.97302 )

[node name="EnemeySpawner4" parent="Spawners" instance=ExtResource( 8 )]
position = Vector2( 1152, -5312 )
rotation = 1.5708
spawn_time = 3

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -544, -5832 )
texture = ExtResource( 11 )
offset = Vector2( 544, 536 )
color = Color( 0.901961, 0.2, 0.2, 1 )
energy = 0.7
range_height = 2048.0

[node name="BarrierArea2D" type="Area2D" parent="."]
position = Vector2( 0, -6976 )
monitorable = false
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BarrierArea2D"]
visible = false
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="BarrierArea2D"]
position = Vector2( -206.803, -32 )
scale = Vector2( 6.4, 1 )
texture = ExtResource( 12 )
offset = Vector2( 32.3129, 32 )
texture_scale = 1.25
color = Color( 0.329412, 1, 0.980392, 1 )
energy = 0.5

[connection signal="body_entered" from="EnemyDetectionArea2D" to="." method="_on_EnemyDetectionArea2D_body_entered"]
[connection signal="body_entered" from="BarrierArea2D" to="." method="_on_BarrierArea2D_body_entered"]

[editable path="Spawners/EnemeySpawner3"]
